add heuristic - when to start the search
Prevent starting the search if the current result set is too big and the
search string is too short. In this case the user has to press return to
explicitly start the search.

--- a/terminology.websearch.scaffold/readme
+++ b/terminology.websearch.scaffold/readme
@@ -17,3 +17,6 @@ www.microsoft.com/language/
 
 page/index.html, page/style.css and page/filterjs/termsjs.js are adapted to the Terminology use case 
 from the examples provided at https://github.com/jiren/filter.js/tree/master/examples.
+
+filter.js was slightly adapted (lines 1243,1244).
+The automatic key event for the search was removed in order to prevent an expensive search while the user is typing. 
